# base-django

./: .env sample  .env.prod.db sample  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
app/: Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt
app/core/: settings.py  urls.py
app/templates/: base.html  login_base.html  messages.html  navbar.html  signup_base.html
app/templates/account/: login.html  logout.html  profile.html  signup.html
app/templates/app/: home.html
app/users/: apps.py  models.py  tests.py  urls.py  views.py
nginx/: nginx.conf
